# rust-contract-template

./: .gitignore  Cargo.toml  README.md  bytecode.hex  deploy.sh
.cargo/: config.toml
src/: main.rs
verifier/: call_from_sol.sol  contract.polkavm
verifier/.cargo/: config.toml
verifier/.cargo/src/: main.rs
