[package]
name = "rust-contract-template"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.84"

[[bin]]
name = "contract"
path = "src/main.rs"

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
panic = "abort"  # Required for no_std
strip = true

[dependencies]
# No-std compatible hash function for winterfell
blake3 = { version = "1.8", default-features = false }

# Procedural macro for PolkaVM
polkavm-derive = { version = "0.19.0" }

# UAPI for host fn access (must match Polkadot SDK rev)
uapi = { package = "pallet-revive-uapi", git = "https://github.com/paritytech/polkadot-sdk.git", rev = "38d2fa859861005157ccb249dca1378f015e0b06", default-features = false, features = ["unstable-hostfn"] }

#
winterfell = { version = "0.12.0", default-features = false } 

# Serde & Bincode for serialization of pub inputs
serde = { version = "1.0", default-features = false, features = ["derive"] }
bincode = { version = "1.3", default-features = false }


[features]
default = []
std = []  # Keep until full no_std transition if necessary
